# RegimeMapApp

./: README.md  RegimeMapApp.spec  launcher.py  pyproject.toml  requirements.txt
docs/: approx_module_specs.md
scripts/: build_exe.ps1
src/regime_map_app/: __main__.py  app.py  main_window.py  resources.py
src/regime_map_app/approx/: __init__.py  backend.py  exceptions.py  models.py  pipeline.py  ui.py  validation.py  worker.py
src/regime_map_app/diff_surface/: __init__.py  exceptions.py  models.py  pipeline.py  ui.py  validation.py  visualization.py  worker.py
src/regime_map_app/regime_map/: __init__.py  cmaps.py  exceptions.py  models.py  pipeline.py  ui.py  validation.py  visualization.py  worker.py
tests/: test_diff_surface_export.py  test_diff_surface_pipeline.py  test_diff_surface_ui.py  test_diff_surface_validation.py  test_pipeline.py  test_regime_map_export.py  test_regime_map_pipeline.py  test_regime_map_ui.py  test_ui_smoke.py  test_validation.py
