[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-map-app"
version = "0.1.0"
description = "GUI module for RBF approximation of experimental CSV datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-qt>=4.4",
]
build = [
  "pyinstaller>=6.19",
]

[project.scripts]
regime-map-app = "regime_map_app.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
regime_map_app = ["assets/*.ico", "assets/*.png"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
